# ggml

./: .gitignore
examples/: CMakeLists.txt  log.h
examples/projectors/: CMakeLists.txt  PerceiverResampler.cpp  attn_bias.csv  attn_bias.pt  convert_to_gguf.py  debug.py  generate_data.py  io.cpp  projector_single_sample.cpp  scratchpad.ipynb  vision_attn_masks_bs_9.gguf  vision_attn_masks_bs_9.pt
examples/tensor_operations/: CMakeLists.txt  compile.sh  convert_to_gguf.py  learn_ggml_tensors.cpp  permute_transpose.ipynb  scratch_pad.ipynb  shape_ops.cpp
examples/tensor_operations/archive/: mul_mat_from_gguf.cpp  mul_mat_inline.cpp
examples/tensor_operations/data_gguf/: 3d_tensor.gguf  batched_mat_mul.gguf  mul_mat_data.gguf
src/: ggml.c
